--- a/Author/UI/Pages/EntryPage.xaml
+++ b/Author/UI/Pages/EntryPage.xaml
@@ -4,9 +4,8 @@
   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
   xmlns:vm="clr-namespace:Author.UI.ViewModels"
   xmlns:pages="clr-namespace:Author.UI.Pages"
-  x:Class="Author.UI.Pages.AddEntryPage"
-  x:Name="AddEntry"
-  BindingContext="{x:Static vm:ViewModelLocator.AddEntryPageVM}"
+  x:Class="Author.UI.Pages.EntryPage"
+  BindingContext="{x:Static vm:ViewModelLocator.EntryPageVM}"
   Icon="Icon.png"
   Title="Add OTP entry">
   <ContentPage.ToolbarItems>
@@ -23,7 +22,7 @@
         Margin="5"
         HorizontalOptions="Start"
         VerticalOptions="Center" />
-      <Picker Margin="5" SelectedIndex="{Binding TypeIndex}">
+      <Picker Margin="5" SelectedIndex="{Binding Type, Mode=TwoWay}">
         <Picker.Items>
           <x:String>Hash based</x:String>
           <x:String>Time based</x:String>
@@ -42,7 +41,7 @@
         Margin="5"
         HorizontalOptions="FillAndExpand"
         Placeholder="Name"
-        Text="{Binding Name}" />
+        Text="{Binding Name, Mode=TwoWay}" />
 
       <Label
         Text="Shared secret"
@@ -52,10 +51,10 @@
         Margin="5"
         HorizontalOptions="FillAndExpand"
         Placeholder="Shared secret"
-        Text="{Binding Secret}" />
+        Text="{Binding Secret, Mode=TwoWay}" />
 
       <Label Text="Code length" Margin="5" HorizontalOptions="Start" />
-      <Picker Margin="5" SelectedIndex="{Binding LengthIndex}">
+      <Picker Margin="5" SelectedIndex="{Binding LengthIndex, Mode=TwoWay}">
         <Picker.Items>
           <x:String>4</x:String>
           <x:String>5</x:String>
