--- a/Author/UI/Pages/EntryPage.xaml
+++ b/Author/UI/Pages/EntryPage.xaml
@@ -4,16 +4,22 @@
   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
   xmlns:vm="clr-namespace:Author.UI.ViewModels"
   xmlns:pages="clr-namespace:Author.UI.Pages"
+  xmlns:behaviors="clr-namespace:Behaviors;assembly=Behaviors"
   x:Class="Author.UI.Pages.EntryPage"
   BindingContext="{x:Static vm:ViewModelLocator.EntryPageVM}"
   Icon="Icon.png"
   Title="{Binding Title}">
+  <ContentPage.Behaviors>
+    <behaviors:EventHandlerBehavior EventName="Disappearing">
+      <behaviors:InvokeCommandAction Command="{Binding DisappearingCommand}" />
+    </behaviors:EventHandlerBehavior>
+  </ContentPage.Behaviors>
   <ContentPage.ToolbarItems>
     <ToolbarItem
       Icon="Accept.png"
       Text="Accept"
       Order="Primary"
-      Activated="OnAcceptTapped" />
+      Command="{Binding AcceptCommand}" />
   </ContentPage.ToolbarItems>
   <ScrollView>
     <StackLayout HorizontalOptions="FillAndExpand" Orientation="Vertical">
