--- a/Author/UI/Pages/SettingsPage.xaml
+++ b/Author/UI/Pages/SettingsPage.xaml
@@ -2,7 +2,10 @@
 <ContentPage
   xmlns="http://xamarin.com/schemas/2014/forms"
   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+  xmlns:vm="clr-namespace:Author.UI.ViewModels"
+  xmlns:behaviors="clr-namespace:Behaviors;assembly=Behaviors"
   x:Class="Author.UI.Pages.SettingsPage"
+  BindingContext="{x:Static vm:ViewModelLocator.SettingsPageVM}"
   Icon="Icon.png"
   Title="Settings">
   <ContentPage.ToolbarItems>
@@ -10,6 +13,6 @@
       Icon="Accept.png"
       Text="Save settings"
       Order="Primary"
-      Activated="OnAcceptTapped" />
+      Command="{Binding AcceptCommand}" />
   </ContentPage.ToolbarItems>
 </ContentPage>
