--- a/Author.UI.Xamarin/UI/Pages/MainPage.xaml
+++ b/Author.UI.Xamarin/UI/Pages/MainPage.xaml
@@ -85,8 +85,8 @@
   <ListView
     HorizontalOptions="FillAndExpand"
     CachingStrategy="RecycleElement"
-    ItemsSource="{Binding EntriesManager.Entries}"
-    SelectedItem="{Binding SelectedItem, Mode=TwoWay}">
+    SelectionMode="None"
+    ItemsSource="{Binding EntriesManager.Entries}">
     <ListView.Behaviors>
       <behaviors:EventHandlerBehavior EventName="ItemAppearing">
         <behaviors:InvokeCommandAction Command="{Binding ItemAppearingCommand}" />
@@ -100,43 +100,7 @@
     </ListView.Behaviors>
     <ListView.ItemTemplate>
       <DataTemplate>
-        <ViewCell>
-          <ViewCell.ContextActions>
-            <MenuItem
-              Command="{Binding BindingContext.ItemEditCommand, Source={x:Reference Name=PageMain}}"
-              CommandParameter="{Binding}"
-              Text="Edit" />
-            <MenuItem
-              Command="{Binding BindingContext.ItemDeleteCommand, Source={x:Reference Name=PageMain}}"
-              CommandParameter="{Binding}"
-              Text="Delete"
-              IsDestructive="True" />
-          </ViewCell.ContextActions>
-          <Grid Padding="5">
-            <Grid.RowDefinitions>
-              <RowDefinition Height="Auto" />
-              <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-              <ColumnDefinition Width="*" />
-              <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-            <Label
-              Grid.Row="0"
-              Grid.Column="0"
-              Text="{Binding Secret.Name}" />
-            <Label
-              Grid.Row="0"
-              Grid.Column="1"
-              Text="{Binding Secret.Code}" />
-            <ProgressBar
-              Grid.Row="1"
-              Grid.Column="0"
-              Grid.ColumnSpan="2"
-              Progress="{Binding Progress, Mode=TwoWay}"
-              pages:AttachedProperties.AnimatedProgress="{Binding AnimatedProgress, Mode=TwoWay}" />
-          </Grid>
-        </ViewCell>
+        <pages:MainPageEntry />
       </DataTemplate>
     </ListView.ItemTemplate>
   </ListView>
